# Multi-Agent-AI-Executive-Assistant

./: .env.example  .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/agents/: __init__.py  calendar_agent.py  email_agent.py  supervisor.py
src/middleware/: __init__.py  human_review.py
src/tools/: __init__.py  calendar_tools.py  email_tools.py  google_auth.py
